add UI logic to show result, made loop add spaces to array
co-authored-by: Teresa Rosinski <trosinski89@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <input id="startAt" class="form-control" type="number">
           </div>
           <button type="submit" class="btn">Start Counting</button>
-        </form>     
+        </form>
+    <div id="result">
+      <p>Mr. Computer says: <span id="output"></span></p>
+    </div>
     </div>
 </body>
 </html>
