add penguin image to result and fade in results
co-authored-by:  Teresa Rosinski <trosinski89@gmail.com>

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div id="result">
       <br>
       <p>Mr. Computer says: <span id="output"></span></p>
+      <img src="img/penguin.png" alt="mathy penguin wizard">
     </div>
     </div>
 </body>
